--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
-    "python.pythonPath": "C:\\Users\\Dozman\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
-    "editor.formatOnSave": true,
-    "files.autoSave": "onFocusChange",
-    "files.autoSaveDelay": 100
+  "python.pythonPath": "env\\Scripts\\python.exe",
+  "editor.formatOnSave": true,
+  "python.terminal.activateEnvironment": true,
+  "python.formatting.provider": "autopep8",
+  "files.autoSave": "onFocusChange",
+  "files.autoSaveDelay": 100,
+  "launch": {
+    "configurations": [],
+    "compounds": []
+  }
 }
